Tue Dec 15 16:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSApplication.m: Terminate modal loop if the window goes away.
	* NSButton.m: Handle key equivalents.
	* NSButtonCell.m: Handle key equivalents.
	* NSCell.m: implement ([-performClick:]) method.
	* NSPanel.m: Close closable panels when user hits escape key.
	handle keyboard shortcut for default option.
	* NSWindow.m: Fix bug causing app to terminate when it shouldn't.

Mon Dec 14 16:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GSServicesMnager.m: Added alert panels to display error messages
	when services fail.  Tested and fixed code for submenus of the
	services menu.  Everything I know of is now implemented and
	working - now to wait for bug reports...

Mon Dec 14 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* NSWindow.m renmae captureMouse: to _captureMouse: (designate as non OS),
	various methods add fieldEditor support. 
	* GSContext.m/GSContext.h revert to previous code as solution discussed
	with Adam Fedor regarding backends had problems I had not forseen. 
	* NSBrowserCell.h/.m specify text subcell as an NSCell, eliminate image 
	cell, copyWithZone: optimize and eliminate use of ASSIGN (fixes serious
	dealloc bug), highlight: eliminate method (fixes dup display bug). 
	* NSButtonCell.m copyWithZone: optimize and eliminate use of ASSIGN 
	* NSStringDrawing.h/.m remove unimplemented draw methods from Category 
	(these are backend specific, can't be defined twice and are already 
	implemented in xraw). 
	* NSApplication.h redefine initialize_gnustep_backend () per Adam's
	redefinition in the backend.
	* Functions.m/.h remove initialize_gnustep_backend() 
 	* NSCell.m preliminary implementation of fieldEditor mechanism, 
	copyWithZone: optimize and eliminate use of ASSIGN
	* NSControl.m rename cell class global to _NSCONTROL_CELL_CLASS 
	* NSMatrix.m implement NSControl's updateCell: to prevent unecessary
	matrix drawing if possible. 